--- a/index.html
+++ b/index.html
@@ -6,10 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Healthy food</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section>
+        <div class="half-width">
+            <h1>Welcome to<br><span class="suman-k">Suman k Datta </span> food network</h1>
+            <p>Flavor, relish, savor, smack, zest, tanginess, piquancy, nip, all those words can be written in place of
+                tang.
+                Bland or dull food is just the opposite. Tart sharp, sharp-tasting that is, bitter, acid or acidic,
+                harsh, sour
+                taste, just like a lemon. Sweet, honeyed and the like words are the opposite.</p>
+        </div>
+        <div class="half-width">
+            <img src="my-bg2.png">
+        </div>
+
+    </section>
 
 </body>
 
