--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to<br><span class="suman-k">Suman k Datta </span> food network</h1>
             <p>Flavor, relish, savor, smack, zest, tanginess, piquancy, nip, all those words can be written in place of
@@ -26,7 +26,19 @@
         <div class="half-width">
             <img src="my-bg2.png">
         </div>
-
+    </section>
+    <section class="top-banner">
+        <div class="half-width">
+            <img src="wo.png" alt="women">
+        </div>
+        <div class="half-width">
+            <h1 class="about-me">About me</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem, perferendis!lorem10Lorem ipsum, dolor
+                sit amet consectetur adipisicing elit. Quidem, perferendis!lorem10Lorem ipsum, dolor sit amet
+                consectetur adipisicing elit. Quidem, perferendis!lorem10
+            </p>
+            <a class="link-button" target="_blank" href="https://web.facebook.com/Suman.Datta.89/">Contact me<a>
+        </div>
     </section>
 
 </body>
