--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section>
         <div class="half-width">
             <h1>Welcome to<br><span class="suman-k">Suman k Datta </span> food network</h1>
             <p>Flavor, relish, savor, smack, zest, tanginess, piquancy, nip, all those words can be written in place of
@@ -27,7 +27,7 @@
             <img src="my-bg2.png">
         </div>
     </section>
-    <section class="top-banner">
+    <section class="about-banner">
         <div class="half-width">
             <img src="wo.png" alt="women">
         </div>
