--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="head-section flexiable-container">
         <div class="half-width">
             <h1>Welcome to<br><span class="suman-k">Suman k Datta </span> food network</h1>
             <p>Flavor, relish, savor, smack, zest, tanginess, piquancy, nip, all those words can be written in place of
@@ -27,7 +27,7 @@
             <img src="my-bg2.png">
         </div>
     </section>
-    <section class="about-banner">
+    <section class="about-banner flexiable-container">
         <div class="half-width">
             <img src="wo.png" alt="women">
         </div>
@@ -38,6 +38,25 @@
                 consectetur adipisicing elit. Quidem, perferendis!lorem10
             </p>
             <a class="link-button" target="_blank" href="https://web.facebook.com/Suman.Datta.89/">Contact me<a>
+        </div>
+    </section>
+    <section class="recipe-area">
+        <div class="my-recipe">
+            <h3>My recipies</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe, sapiente?Lorem ipsum dolor sit, amet
+                consectetur adipisicing elit. Atque, perspiciat</p>
+        </div>
+        <div class="flexiable-container">
+            <div class="half-width">
+                <img src="fo.png" alt="food">
+                <h3>Recipies Title</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, esse.</p>
+            </div>
+            <div class="half-width">
+                <img src="fo1.jpg" alt="">
+                <h3>My recipies</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, inventore?</p>
+            </div>
         </div>
     </section>
 
