--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                 consectetur adipisicing elit. Atque, perspiciat</p>
         </div>
         <div class="flexiable-container">
-            <div class="half-width">
-                <img src="fo.png" alt="food">
+            <div class="pic">
+                <img class="pa" src="cv.jpg" alt="food">
                 <h3>Recipies Title</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, esse.</p>
             </div>
-            <div class="half-width">
-                <img src="fo1.jpg" alt="">
+            <div class="pic">
+                <img class="pa" src="cv.jpg" alt="">
                 <h3>My recipies</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, inventore?</p>
             </div>
